подключение webp и loadlazy

--- a/src/scss/components/footer.scss
+++ b/src/scss/components/footer.scss
@@ -1,6 +1,6 @@
 .footer {
   position: relative;
-  background: rgba($color: $color-grey, $alpha: .8) url('../images/map.png');
+  background-color: rgba($color: $color-grey, $alpha: .8);
   z-index: 0;
   color: $color-white;
 
