--- a/src/scss/modules/map.scss
+++ b/src/scss/modules/map.scss
@@ -1,6 +1,6 @@
 .map-section {
   height: 1079px;
-  background: rgba($color: $color-grey, $alpha: .8) url('../images/map.png');
+  background-color: rgba($color: $color-grey, $alpha: .8);
   color: $color-white;
 }
 
